@@ -2,8 +2,16 @@
 
 ## JVM参数
 ```text
--Xmx500m -Xms500m -XX:+HeapDumpOnOutOfMemoryError
+-Xmx500m
+-Xms500m
+-XX:+HeapDumpOnOutOfMemoryError
 -XX:HeapDumpPath=./excelexportdemo.hprof
+-Xloggc:./gc-%t.log
+-XX:+PrintGCDetails
+-XX:+PrintGCDateStamps
+-XX:+PrintGCTimeStamps
+-XX:+HeapDumpAfterFullGC
+-XX:+HeapDumpBeforeFullGC
 ```
 
 ## Apache POI SXSSFWorkbook
